--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,77 @@
+.button {
+    margin: 5px;
+    max-width: 40vw;
 
-/* .question-box{
-display:block;
-} */
+}
 
+.button:hover {
+    box-shadow: 0px 0px 10px black;
+}
+
+#timer {
+    font-size: 25px;
+}
+
+.gameTime {
+    text-align: right;
+    margin: 5px 10px;
+}
+
+.welcome-box {
+    margin: 20px 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 {
+    margin: 10px;
+}
+
+.question-box p {
+    margin: 20px;
+}
+
+.question-box {
+    display: flex;
+    flex-direction: column;
+}
+
+#question {
+    font-size: large;
+    font-weight: 600;
+    margin: 20px;
+}
+
+ol {
+    display: flex;
+    flex-direction: column;
+}
+
+ol li {
+    width: 50%;
+    border-radius: 3px;
+}
+
+.answer {
+    margin: 10px 10px 10px 30px;
+}
 
 .answer:hover {
-    background-color:blue;
+    background-color: lightblue;
+}
+
+.result-box,
+.Highscores-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    margin-top: 30px;
+}
+
+
+ul li {
+    list-style: none;
+    margin: 10px;
 }
